Thu Aug  7 02:12:09 BST 2008  Colin Watson  <cjwatson@debian.org>

	* src/man.c (display): If we fail to decompress man_file and it
	  matters (i.e. we aren't just displaying a stray cat), then emit an
	  error message and return early (Coverity CID #5, #6).

Wed Aug  6 22:36:48 BST 2008  Colin Watson  <cjwatson@debian.org>

	* libdb/db_lookup.c (infoalloc): Move to ...
	* libdb/db_storage.h (infoalloc): ... here (as inline function).
	  Include "xalloc.h" for this.
	  (dblookup_all, dblookup_exact, gripe_lock, gripe_corrupt_data):
	  Stop declaring inline.
	* src/security.h (drop_effective_privs, regain_effective_privs):
	  Stop declaring inline.

Wed Aug  6 22:23:41 BST 2008  Colin Watson  <cjwatson@debian.org>

	* src/man.c (display): If display_to_stdout is set, assert that
	  man_file is non-NULL; all the stray-cat code paths ensure that
	  neither troff nor recode is set by this point (Coverity CID #5).

Wed Aug  6 21:40:37 BST 2008  Colin Watson  <cjwatson@debian.org>

	* src/man.c (manopt_to_env): Duplicate options assigned to elements
	  of argv, and free the copy of manopt before returning. This isn't
	  really a bug as such, but it appeases Coverity CID #22.

Thu Jul 31 02:10:06 BST 2008  Colin Watson  <cjwatson@debian.org>

	* src/man.c (get_section_list): Fix leak of get_sections return
	  value if the configuration file contains no SECTIONS directives
	  (Coverity CID #21).

Thu Jul 31 02:03:46 BST 2008  Colin Watson  <cjwatson@debian.org>

	* src/man.c (try_section): Free info and info_buffer if there is a
	  failure before adding a candidate (Coverity CID #24).

Thu Jul 31 01:41:17 BST 2008  Colin Watson  <cjwatson@debian.org>

	* src/manp.c (add_nls_manpath): Copy manpathlist to omanpathlist
	  after the initial locale checks, to avoid memory leaks (Coverity
	  CID #20).
	  (get_manpath): Free return value of add_system_manpath (Coverity
	  CID #18) and guess_manpath (Coverity CID #19) when they're simply
	  interpolated into another string.
